se agraga funcionalidad al boton de informacion

--- a/EduMultiPro 3 Parte/FrontEnd/admin/3-curso.html
+++ b/EduMultiPro 3 Parte/FrontEnd/admin/3-curso.html
@@ -82,6 +82,19 @@
 
             <!--Tabla-->
             <div class="col-10" id="contenidoTabla">
+
+                <div class="card">
+                    <div class="targeta">
+                        <i class="fa-solid fa-book"></i><h1>Materia</h1>
+                    </div>
+                    <div class="targeta">
+                        <i class="fa-solid fa-temperature-low"></i><h1>Grado</h1>
+                    </div>
+                    <div class="targeta">
+                        <i class="fa-solid fa-clock"></i><h1>Jornada</h1>
+                    </div>
+                </div>
+                
                 <div class="titulo">
                     <h1>Cursos Actuales</h1>
                     <button class="crear">Crear Curso</button>
@@ -105,7 +118,7 @@
                                 <td>103</td>
                                 <td>PRIMERO</td>
                                 <td>MAÑANA</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -114,7 +127,7 @@
                                 <td>701</td>
                                 <td>SEPTIMO</td>
                                 <td>TARDE</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -123,7 +136,7 @@
                                 <td>903</td>
                                 <td>NOVENO</td>
                                 <td>MAÑANA</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -132,7 +145,7 @@
                                 <td>503</td>
                                 <td>QUINTO</td>
                                 <td>MAÑANA</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -141,7 +154,7 @@
                                 <td>1104</td>
                                 <td>ONCE</td>
                                 <td>TARDE</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -150,7 +163,7 @@
                                 <td>103</td>
                                 <td>PRIMERO</td>
                                 <td>MAÑANA</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -159,7 +172,7 @@
                                 <td>701</td>
                                 <td>SEPTIMO</td>
                                 <td>TARDE</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -168,7 +181,7 @@
                                 <td>903</td>
                                 <td>NOVENO</td>
                                 <td>MAÑANA</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -177,7 +190,7 @@
                                 <td>503</td>
                                 <td>QUINTO</td>
                                 <td>MAÑANA</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -186,7 +199,7 @@
                                 <td>1104</td>
                                 <td>ONCE</td>
                                 <td>TARDE</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -195,7 +208,7 @@
                                 <td>103</td>
                                 <td>PRIMERO</td>
                                 <td>MAÑANA</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -204,7 +217,7 @@
                                 <td>701</td>
                                 <td>SEPTIMO</td>
                                 <td>TARDE</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -213,7 +226,7 @@
                                 <td>903</td>
                                 <td>NOVENO</td>
                                 <td>MAÑANA</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -222,7 +235,7 @@
                                 <td>503</td>
                                 <td>QUINTO</td>
                                 <td>MAÑANA</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -231,7 +244,7 @@
                                 <td>1104</td>
                                 <td>ONCE</td>
                                 <td>TARDE</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -240,7 +253,7 @@
                                 <td>103</td>
                                 <td>PRIMERO</td>
                                 <td>MAÑANA</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -249,7 +262,7 @@
                                 <td>701</td>
                                 <td>SEPTIMO</td>
                                 <td>TARDE</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -258,7 +271,7 @@
                                 <td>903</td>
                                 <td>NOVENO</td>
                                 <td>MAÑANA</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -267,7 +280,7 @@
                                 <td>503</td>
                                 <td>QUINTO</td>
                                 <td>MAÑANA</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -276,7 +289,7 @@
                                 <td>1104</td>
                                 <td>ONCE</td>
                                 <td>TARDE</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -285,7 +298,7 @@
                                 <td>103</td>
                                 <td>PRIMERO</td>
                                 <td>MAÑANA</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -294,7 +307,7 @@
                                 <td>701</td>
                                 <td>SEPTIMO</td>
                                 <td>TARDE</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -303,7 +316,7 @@
                                 <td>903</td>
                                 <td>NOVENO</td>
                                 <td>MAÑANA</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -312,7 +325,7 @@
                                 <td>503</td>
                                 <td>QUINTO</td>
                                 <td>MAÑANA</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -321,7 +334,7 @@
                                 <td>1104</td>
                                 <td>ONCE</td>
                                 <td>TARDE</td>
-                                <td><button><i class="fa-solid fa-people-group"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-people-group"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
