--- a/EduMultiPro 3 Parte/FrontEnd/admin/7-planillas.html
+++ b/EduMultiPro 3 Parte/FrontEnd/admin/7-planillas.html
@@ -107,7 +107,7 @@
                                 <td>902</td>
                                 <td>Tarde</td>
                                 <td>Primer periodo</td>
-                                <td><button><i class="fa-solid fa-folder-open"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-folder-open"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -117,7 +117,7 @@
                                 <td>504</td>
                                 <td>Mañana</td>
                                 <td>Segundo Periodo</td>
-                                <td><button><i class="fa-solid fa-folder-open"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-folder-open"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -127,7 +127,7 @@
                                 <td>701</td>
                                 <td>Mañana</td>
                                 <td>Tercer Periodo</td>
-                                <td><button><i class="fa-solid fa-folder-open"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-folder-open"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -137,7 +137,7 @@
                                 <td>302</td>
                                 <td>Tarde</td>
                                 <td>Cuarto Periodo</td>
-                                <td><button><i class="fa-solid fa-folder-open"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-folder-open"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -147,7 +147,7 @@
                                 <td>902</td>
                                 <td>Tarde</td>
                                 <td>Primer periodo</td>
-                                <td><button><i class="fa-solid fa-folder-open"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-folder-open"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -157,7 +157,7 @@
                                 <td>504</td>
                                 <td>Mañana</td>
                                 <td>Segundo Periodo</td>
-                                <td><button><i class="fa-solid fa-folder-open"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-folder-open"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -167,7 +167,7 @@
                                 <td>701</td>
                                 <td>Mañana</td>
                                 <td>Tercer Periodo</td>
-                                <td><button><i class="fa-solid fa-folder-open"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-folder-open"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -177,7 +177,7 @@
                                 <td>302</td>
                                 <td>Tarde</td>
                                 <td>Cuarto Periodo</td>
-                                <td><button><i class="fa-solid fa-folder-open"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-folder-open"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -187,7 +187,7 @@
                                 <td>902</td>
                                 <td>Tarde</td>
                                 <td>Primer periodo</td>
-                                <td><button><i class="fa-solid fa-folder-open"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-folder-open"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -197,7 +197,7 @@
                                 <td>504</td>
                                 <td>Mañana</td>
                                 <td>Segundo Periodo</td>
-                                <td><button><i class="fa-solid fa-folder-open"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-folder-open"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -207,7 +207,7 @@
                                 <td>701</td>
                                 <td>Mañana</td>
                                 <td>Tercer Periodo</td>
-                                <td><button><i class="fa-solid fa-folder-open"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-folder-open"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -217,7 +217,7 @@
                                 <td>302</td>
                                 <td>Tarde</td>
                                 <td>Cuarto Periodo</td>
-                                <td><button><i class="fa-solid fa-folder-open"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-folder-open"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -227,7 +227,7 @@
                                 <td>902</td>
                                 <td>Tarde</td>
                                 <td>Primer periodo</td>
-                                <td><button><i class="fa-solid fa-folder-open"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-folder-open"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -237,7 +237,7 @@
                                 <td>504</td>
                                 <td>Mañana</td>
                                 <td>Segundo Periodo</td>
-                                <td><button><i class="fa-solid fa-folder-open"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-folder-open"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -247,7 +247,7 @@
                                 <td>701</td>
                                 <td>Mañana</td>
                                 <td>Tercer Periodo</td>
-                                <td><button><i class="fa-solid fa-folder-open"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-folder-open"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -257,7 +257,7 @@
                                 <td>302</td>
                                 <td>Tarde</td>
                                 <td>Cuarto Periodo</td>
-                                <td><button><i class="fa-solid fa-folder-open"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-folder-open"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -267,7 +267,7 @@
                                 <td>902</td>
                                 <td>Tarde</td>
                                 <td>Primer periodo</td>
-                                <td><button><i class="fa-solid fa-folder-open"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-folder-open"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -277,7 +277,7 @@
                                 <td>504</td>
                                 <td>Mañana</td>
                                 <td>Segundo Periodo</td>
-                                <td><button><i class="fa-solid fa-folder-open"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-folder-open"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -287,7 +287,7 @@
                                 <td>701</td>
                                 <td>Mañana</td>
                                 <td>Tercer Periodo</td>
-                                <td><button><i class="fa-solid fa-folder-open"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-folder-open"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -297,7 +297,7 @@
                                 <td>302</td>
                                 <td>Tarde</td>
                                 <td>Cuarto Periodo</td>
-                                <td><button><i class="fa-solid fa-folder-open"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-folder-open"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
