--- a/EduMultiPro 3 Parte/FrontEnd/admin/4-horario.html
+++ b/EduMultiPro 3 Parte/FrontEnd/admin/4-horario.html
@@ -105,7 +105,7 @@
                                 <td>Horario para el curso 102</td>
                                 <td>102</td>
                                 <td>tarde</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -114,7 +114,7 @@
                                 <td>Horario para 402</td>
                                 <td>402</td>
                                 <td>mañana</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -123,7 +123,7 @@
                                 <td>horario para 502</td>
                                 <td>502</td>
                                 <td>tarde</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -132,7 +132,7 @@
                                 <td>Horario para 902</td>
                                 <td>902</td>
                                 <td>Mañana</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -142,7 +142,7 @@
                                 <td>Horario para el curso 102</td>
                                 <td>102</td>
                                 <td>tarde</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -151,7 +151,7 @@
                                 <td>Horario para 402</td>
                                 <td>402</td>
                                 <td>mañana</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -160,7 +160,7 @@
                                 <td>horario para 502</td>
                                 <td>502</td>
                                 <td>tarde</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -169,7 +169,7 @@
                                 <td>Horario para 902</td>
                                 <td>902</td>
                                 <td>Mañana</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -179,7 +179,7 @@
                                 <td>Horario para el curso 102</td>
                                 <td>102</td>
                                 <td>tarde</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -188,7 +188,7 @@
                                 <td>Horario para 402</td>
                                 <td>402</td>
                                 <td>mañana</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -197,7 +197,7 @@
                                 <td>horario para 502</td>
                                 <td>502</td>
                                 <td>tarde</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -206,7 +206,7 @@
                                 <td>Horario para 902</td>
                                 <td>902</td>
                                 <td>Mañana</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -216,7 +216,7 @@
                                 <td>Horario para el curso 102</td>
                                 <td>102</td>
                                 <td>tarde</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -225,7 +225,7 @@
                                 <td>Horario para 402</td>
                                 <td>402</td>
                                 <td>mañana</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -234,7 +234,7 @@
                                 <td>horario para 502</td>
                                 <td>502</td>
                                 <td>tarde</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -243,7 +243,7 @@
                                 <td>Horario para 902</td>
                                 <td>902</td>
                                 <td>Mañana</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -253,7 +253,7 @@
                                 <td>Horario para el curso 102</td>
                                 <td>102</td>
                                 <td>tarde</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -262,7 +262,7 @@
                                 <td>Horario para 402</td>
                                 <td>402</td>
                                 <td>mañana</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -271,7 +271,7 @@
                                 <td>horario para 502</td>
                                 <td>502</td>
                                 <td>tarde</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -280,7 +280,7 @@
                                 <td>Horario para 902</td>
                                 <td>902</td>
                                 <td>Mañana</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -289,7 +289,7 @@
                                 <td>Horario para el curso 102</td>
                                 <td>102</td>
                                 <td>tarde</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -298,7 +298,7 @@
                                 <td>Horario para 402</td>
                                 <td>402</td>
                                 <td>mañana</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -307,7 +307,7 @@
                                 <td>horario para 502</td>
                                 <td>502</td>
                                 <td>tarde</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -316,7 +316,7 @@
                                 <td>Horario para 902</td>
                                 <td>902</td>
                                 <td>Mañana</td>
-                                <td><a href="../administrador/9-VistaHorario.html"><button><i class="fa-solid fa-calendar-days"></i></button></a></td>
+                                <td><button class="info"><i class="fa-solid fa-calendar-days"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
