--- a/EduMultiPro 3 Parte/FrontEnd/admin/5-aula.html
+++ b/EduMultiPro 3 Parte/FrontEnd/admin/5-aula.html
@@ -107,7 +107,7 @@
                                 <td>Matemasticas</td>
                                 <td>502</td>
                                 <td>Juan Camilo</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -117,7 +117,7 @@
                                 <td>Mecanica</td>
                                 <td>603</td>
                                 <td>Sara Camila</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -127,7 +127,7 @@
                                 <td>Ingles</td>
                                 <td>401</td>
                                 <td>Wilson Sanches</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -137,7 +137,7 @@
                                 <td>Español</td>
                                 <td>702</td>
                                 <td>Miguel Sanches</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -147,7 +147,7 @@
                                 <td>Matemasticas</td>
                                 <td>502</td>
                                 <td>Juan Camilo</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -157,7 +157,7 @@
                                 <td>Mecanica</td>
                                 <td>603</td>
                                 <td>Sara Camila</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -167,7 +167,7 @@
                                 <td>Ingles</td>
                                 <td>401</td>
                                 <td>Wilson Sanches</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -177,7 +177,7 @@
                                 <td>Español</td>
                                 <td>702</td>
                                 <td>Miguel Sanches</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -187,7 +187,7 @@
                                 <td>Matemasticas</td>
                                 <td>502</td>
                                 <td>Juan Camilo</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -197,7 +197,7 @@
                                 <td>Mecanica</td>
                                 <td>603</td>
                                 <td>Sara Camila</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -207,7 +207,7 @@
                                 <td>Ingles</td>
                                 <td>401</td>
                                 <td>Wilson Sanches</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -217,7 +217,7 @@
                                 <td>Español</td>
                                 <td>702</td>
                                 <td>Miguel Sanches</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -227,7 +227,7 @@
                                 <td>Matemasticas</td>
                                 <td>502</td>
                                 <td>Juan Camilo</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -237,7 +237,7 @@
                                 <td>Mecanica</td>
                                 <td>603</td>
                                 <td>Sara Camila</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -247,7 +247,7 @@
                                 <td>Ingles</td>
                                 <td>401</td>
                                 <td>Wilson Sanches</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -257,7 +257,7 @@
                                 <td>Español</td>
                                 <td>702</td>
                                 <td>Miguel Sanches</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -267,7 +267,7 @@
                                 <td>Matemasticas</td>
                                 <td>502</td>
                                 <td>Juan Camilo</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -277,7 +277,7 @@
                                 <td>Mecanica</td>
                                 <td>603</td>
                                 <td>Sara Camila</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -287,7 +287,7 @@
                                 <td>Ingles</td>
                                 <td>401</td>
                                 <td>Wilson Sanches</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -297,7 +297,7 @@
                                 <td>Español</td>
                                 <td>702</td>
                                 <td>Miguel Sanches</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -307,7 +307,7 @@
                                 <td>Matemasticas</td>
                                 <td>502</td>
                                 <td>Juan Camilo</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -317,7 +317,7 @@
                                 <td>Mecanica</td>
                                 <td>603</td>
                                 <td>Sara Camila</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -327,7 +327,7 @@
                                 <td>Ingles</td>
                                 <td>401</td>
                                 <td>Wilson Sanches</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -337,7 +337,7 @@
                                 <td>Español</td>
                                 <td>702</td>
                                 <td>Miguel Sanches</td>
-                                <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-users-rectangle"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
