--- a/EduMultiPro 3 Parte/FrontEnd/admin/5.5aul.html
+++ b/EduMultiPro 3 Parte/FrontEnd/admin/5.5aul.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Noticias</title>
+  <title>Aula</title>
   <link rel="icon" href="../img/icono.png">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"> <!--libreria de logos-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/8.css">
+  <link rel="stylesheet" href="../css/5.5.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!--permite que sangan las alertas-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" /> <!--pagina para iconos-->
   <!-- jquery -->
@@ -83,57 +83,11 @@
             <!--Tabla-->
             <div class="col-10" id="contenidoTabla">
                 <div class="titulo">
-                    <h1>Gestion de Noticias</h1>
-                    <button class="crear">Crear Noticia</button>
+                    <h1>Aula del curso</h1>
+                    <button class="crear">Crear Usuario</button>
                 </div>
                 <div class="contenedor-tabla">
-                    <table class="tablaUsuarios" id="tablaUsuarios">
-                        <thead>
-                            <tr>
-                                <th>ID</th>
-                                <th>Titulo</th>
-                                <th>Tipo</th>
-                                <th>Noticia</th>
-                                <th>Modificar</th>
-                                <th>Eliminar</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>N001</td>
-                                <td>Nuevos Boletines</td>
-                                <td>Noticia Primaria 1</td>
-                                <td><button class="info"><i class="fa-solid fa-radio"></i></td>
-                                  <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
-                                  <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
-                            </tr>
-                            <tr>
-                                <td>N002</td>
-                                <td>Nuevos Trabajos</td>
-                                <td>Noticia Secundaria 2</td>
-                                <td><button class="info"><i class="fa-solid fa-radio"></i></button></td>
-                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
-                            </tr>
-                            <tr>
-                                <td>N003</td>
-                                <td>Nuevas Tecnologias</td>
-                                <td>Noticia Primaria 2</td>
-                                <td><button class="info"><i class="fa-solid fa-radio"></i></button></td>
-                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
-                            </tr>
-                            <tr>
-                                <td>N004</td>
-                                <td>Nuevos Horarios</td>
-                                <td>Noticia Secundaria 3</td>
-                                <td><button class="info"><i class="fa-solid fa-radio"></i></button></td>
-                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
-                            </tr>
-                            
-                        </tbody>
-                    </table>
+                    
                 </div>
             </div>
         </div>
@@ -154,6 +108,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script src="../js/8.js"></script>
+  <script src="../js/2.js"></script>
 </body>
 </html>
