--- a/EduMultiPro 3 Parte/FrontEnd/admin/6-notas.html
+++ b/EduMultiPro 3 Parte/FrontEnd/admin/6-notas.html
@@ -105,7 +105,7 @@
                                 <td>Español</td>
                                 <td>602</td>
                                 <td>Mañana</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -114,7 +114,7 @@
                                 <td>Ingles</td>
                                 <td>202</td>
                                 <td>Tarde</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -123,7 +123,7 @@
                                 <td>Mecanica</td>
                                 <td>403</td>
                                 <td>Tarde</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -132,7 +132,7 @@
                                 <td>Sosiles</td>
                                 <td>503</td>
                                 <td>Tarde</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -141,7 +141,7 @@
                                 <td>Español</td>
                                 <td>602</td>
                                 <td>Mañana</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -150,7 +150,7 @@
                                 <td>Ingles</td>
                                 <td>202</td>
                                 <td>Tarde</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -159,7 +159,7 @@
                                 <td>Mecanica</td>
                                 <td>403</td>
                                 <td>Tarde</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -168,7 +168,7 @@
                                 <td>Sosiles</td>
                                 <td>503</td>
                                 <td>Tarde</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -177,7 +177,7 @@
                                 <td>Español</td>
                                 <td>602</td>
                                 <td>Mañana</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -186,7 +186,7 @@
                                 <td>Ingles</td>
                                 <td>202</td>
                                 <td>Tarde</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -195,7 +195,7 @@
                                 <td>Mecanica</td>
                                 <td>403</td>
                                 <td>Tarde</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -204,7 +204,7 @@
                                 <td>Sosiles</td>
                                 <td>503</td>
                                 <td>Tarde</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -213,7 +213,7 @@
                                 <td>Español</td>
                                 <td>602</td>
                                 <td>Mañana</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -222,7 +222,7 @@
                                 <td>Ingles</td>
                                 <td>202</td>
                                 <td>Tarde</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -231,7 +231,7 @@
                                 <td>Mecanica</td>
                                 <td>403</td>
                                 <td>Tarde</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -240,7 +240,7 @@
                                 <td>Sosiles</td>
                                 <td>503</td>
                                 <td>Tarde</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -249,7 +249,7 @@
                                 <td>Español</td>
                                 <td>602</td>
                                 <td>Mañana</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -258,7 +258,7 @@
                                 <td>Ingles</td>
                                 <td>202</td>
                                 <td>Tarde</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -267,7 +267,7 @@
                                 <td>Mecanica</td>
                                 <td>403</td>
                                 <td>Tarde</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -276,7 +276,7 @@
                                 <td>Sosiles</td>
                                 <td>503</td>
                                 <td>Tarde</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -285,7 +285,7 @@
                                 <td>Español</td>
                                 <td>602</td>
                                 <td>Mañana</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -294,7 +294,7 @@
                                 <td>Ingles</td>
                                 <td>202</td>
                                 <td>Tarde</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -303,7 +303,7 @@
                                 <td>Mecanica</td>
                                 <td>403</td>
                                 <td>Tarde</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -312,7 +312,7 @@
                                 <td>Sosiles</td>
                                 <td>503</td>
                                 <td>Tarde</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -321,7 +321,7 @@
                                 <td>Español</td>
                                 <td>602</td>
                                 <td>Mañana</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -330,7 +330,7 @@
                                 <td>Ingles</td>
                                 <td>202</td>
                                 <td>Tarde</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -339,7 +339,7 @@
                                 <td>Mecanica</td>
                                 <td>403</td>
                                 <td>Tarde</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
@@ -348,7 +348,7 @@
                                 <td>Sosiles</td>
                                 <td>503</td>
                                 <td>Tarde</td>
-                                <td><button><i class="fa-solid fa-ranking-star"></i></button></td>
+                                <td><button class="info"><i class="fa-solid fa-ranking-star"></i></button></td>
                                 <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
                                 <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
