se agrga consulta de horario y usuario

--- a/EduMultiPro 3 Parte/FrontEnd/admin/3.3cur.html
+++ b/EduMultiPro 3 Parte/FrontEnd/admin/3.3cur.html
@@ -82,10 +82,8 @@
 
             <!--Tabla-->
             <div class="col-10" id="contenidoTabla">
-                <div class="titulo">
-                    <h1>Miembros del Curso</h1>
-                    <button class="crear">Crear Usuario</button>
-                </div>
+                <h2>Mis Datos</h2>
+                <div class="linea"></div>
                 <div class="contenedor-tabla">
                     
                 </div>
