se agrega consulta noticia

--- a/EduMultiPro 3 Parte/FrontEnd/admin/8.8noti.html
+++ b/EduMultiPro 3 Parte/FrontEnd/admin/8.8noti.html
@@ -82,13 +82,34 @@
 
             <!--Tabla-->
             <div class="col-10" id="contenidoTabla">
-                <div class="titulo">
-                    <h1>Informacion Noticia</h1>
-                    <button class="crear">Crear Usuario</button>
+
+              <div class="botones">
+                <button class="editar" type="button">Editar</button>
+                <button class="salir" type="button">Salir</button>
+              </div>
+
+              <div class="row" id="cont1">
+                <div class="cont2">
+                  <div class="row">
+                    <div class="col-xl-12" id="h0">
+                      <h2>Nuestra Plataforma</h2>
+                    </div>
+                    <div class="col-xl-12" id="h1">
+                      <p>En su última actualización, EduMultiPro ha presentado nuevas funciones basadas en inteligencia artificial que permiten a los estudiantes recibir tutorías personalizadas según su progreso y estilo de aprendizaje. Estas herramientas analizan el desempeño de los usuarios para sugerir actividades específicas y mejorar las áreas en las que más necesitan apoyo.</p>
+                    </div>
+                    <div class="col-xl-12" id="h2"> 
+                      <img src="../img/f2.PNG" alt="">
+                    </div>
+                    <div class="col-xl-6" id="h3">
+                      <p>Además, la incorporación de realidad aumentada promete una experiencia más inmersiva en asignaturas como ciencias y geografía. Los estudiantes podrán explorar modelos tridimensionales de sistemas solares, estructuras celulares y mapas interactivos directamente desde la plataforma, elevando la enseñanza a un nuevo nivel tecnológico.</p>
+                    </div>
+                    <div class="col-xl-6" id="h4"> 
+                      <img src="../img/1.PNG" alt="">
+                    </div>
+                  </div>
                 </div>
-                <div class="contenedor-tabla">
-                    
-                </div>
+              </div>
+
             </div>
         </div>
     </div>
@@ -108,6 +129,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script src="../js/2.js"></script>
+  <script src="../js/8.8.js"></script>
 </body>
 </html>
